v3.0.0/_sources/plugins/device_credential_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.device_credential_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.device_credential_info -- Information module for Device Credential
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.device_credential_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Device Credential.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-siteId"></div>
                    <b>siteId</b>
                    <a class="ansibleOptionLink" href="#parameter-siteId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SiteId query parameter. Site id to retrieve the credential details associated with the site.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Device Credential reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Device Credential object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Device Credential
      cisco.dnac.device_credential_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        siteId: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;snmp_v3&quot;: [
        {
          &quot;username&quot;: &quot;string&quot;,
          &quot;authPassword&quot;: &quot;string&quot;,
          &quot;authType&quot;: &quot;string&quot;,
          &quot;privacyPassword&quot;: &quot;string&quot;,
          &quot;privacyType&quot;: &quot;string&quot;,
          &quot;snmpMode&quot;: &quot;string&quot;,
          &quot;comments&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;credentialType&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;
        }
      ],
      &quot;http_read&quot;: [
        {
          &quot;secure&quot;: &quot;string&quot;,
          &quot;username&quot;: &quot;string&quot;,
          &quot;password&quot;: &quot;string&quot;,
          &quot;port&quot;: &quot;string&quot;,
          &quot;comments&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;credentialType&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;
        }
      ],
      &quot;http_write&quot;: [
        {
          &quot;secure&quot;: &quot;string&quot;,
          &quot;username&quot;: &quot;string&quot;,
          &quot;password&quot;: &quot;string&quot;,
          &quot;port&quot;: &quot;string&quot;,
          &quot;comments&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;credentialType&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;
        }
      ],
      &quot;snmp_v2_write&quot;: [
        {
          &quot;writeCommunity&quot;: &quot;string&quot;,
          &quot;comments&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;credentialType&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;
        }
      ],
      &quot;snmp_v2_read&quot;: [
        {
          &quot;readCommunity&quot;: &quot;string&quot;,
          &quot;comments&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;credentialType&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;
        }
      ],
      &quot;cli&quot;: [
        {
          &quot;username&quot;: &quot;string&quot;,
          &quot;enablePassword&quot;: &quot;string&quot;,
          &quot;password&quot;: &quot;string&quot;,
          &quot;comments&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;credentialType&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;
        }
      ]
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

